prototype for info

--- a/app/index.html
+++ b/app/index.html
@@ -24,32 +24,30 @@
   <body>
 
     <div class="game">
-      <h1> Welcome to the arena</h1>
+      <h1>Backyard Brawl</h1>
 
         <div class="left">
-          <div class="dog">
+          <div class="dog"><strong>Choose a competitor</strong>
           </div>
             <div class="goodies">
               <ul>
-                <li class="pic">
-                  <a href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx-6pi7gtsCCmHsRjWg8pds9YdA6k328IPr8Sn7TBRyVx_c9t7Sg'><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx-6pi7gtsCCmHsRjWg8pds9YdA6k328IPr8Sn7TBRyVx_c9t7Sg'/></a>
-</li>
-                <li class="pic"><a href='https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTL7reEzaQ__82NZMJHzuxhacyn8UidXL9MBdRS03vifkyypqBhHg'><img src='https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTL7reEzaQ__82NZMJHzuxhacyn8UidXL9MBdRS03vifkyypqBhHg'/></a></li>
-                <li class="pic"><a href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqFwbP6lHp6XoHuPUw2kDLUTy1e1C0Ps-f67xe2Hwf1DlG01Gf'><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqFwbP6lHp6XoHuPUw2kDLUTy1e1C0Ps-f67xe2Hwf1DlG01Gf'/></a></li>
+                <li class="pic" id="golden"><a href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx-6pi7gtsCCmHsRjWg8pds9YdA6k328IPr8Sn7TBRyVx_c9t7Sg'><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx-6pi7gtsCCmHsRjWg8pds9YdA6k328IPr8Sn7TBRyVx_c9t7Sg'/></a>                 <p class="goldie"></p>
+                <li class="pic" id="lab"><a href='https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTL7reEzaQ__82NZMJHzuxhacyn8UidXL9MBdRS03vifkyypqBhHg'><img src='https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTL7reEzaQ__82NZMJHzuxhacyn8UidXL9MBdRS03vifkyypqBhHg'/></a></li>
+                <li class="pic" id="shitzu"><a href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqFwbP6lHp6XoHuPUw2kDLUTy1e1C0Ps-f67xe2Hwf1DlG01Gf'><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqFwbP6lHp6XoHuPUw2kDLUTy1e1C0Ps-f67xe2Hwf1DlG01Gf'/></a></li>
               </ul>
             </div>
         </div>
 
-        <button>Let the Games Begin</button>
+        <button>FIGHT!</button>
 
         <div class="right">
-          <div class="cat">
+          <div class="cat"><strong>Choose a competitor</strong>
           </div>
             <div class="baddies">
               <ul>
-                <li class="tic"><a href='https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTJ7llPIRthJUcLnnGvStibQ42jZb-Ag8UJiwuVFSNLpliByTzPyg'><img src='https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTJ7llPIRthJUcLnnGvStibQ42jZb-Ag8UJiwuVFSNLpliByTzPyg'/></a></li>
-                <li class="tic"><a href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEAZ-mgAvMrBZ7VWdosqDel__rUvyFoCGKYhM52H74W7G_kHZq'><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEAZ-mgAvMrBZ7VWdosqDel__rUvyFoCGKYhM52H74W7G_kHZq'/></a></li>
-                <li class="tic"><a href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5pdwWmCRpXy8QEutOp2WzA64D5HGVI7laBn-wDhsZvuxqh8Qn'><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5pdwWmCRpXy8QEutOp2WzA64D5HGVI7laBn-wDhsZvuxqh8Qn'/></a></li>
+                <li class="tic" id="persian"><a href='https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTJ7llPIRthJUcLnnGvStibQ42jZb-Ag8UJiwuVFSNLpliByTzPyg'><img src='https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTJ7llPIRthJUcLnnGvStibQ42jZb-Ag8UJiwuVFSNLpliByTzPyg'/></a></li>
+                <li class="tic" id="alley"><a href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEAZ-mgAvMrBZ7VWdosqDel__rUvyFoCGKYhM52H74W7G_kHZq'><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEAZ-mgAvMrBZ7VWdosqDel__rUvyFoCGKYhM52H74W7G_kHZq'/></a></li>
+                <li class="tic" id="coon"><a href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5pdwWmCRpXy8QEutOp2WzA64D5HGVI7laBn-wDhsZvuxqh8Qn'><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5pdwWmCRpXy8QEutOp2WzA64D5HGVI7laBn-wDhsZvuxqh8Qn'/></a></li>
               </ul>
             </div>
         </div>
