click on pic and shws id

--- a/app/index.html
+++ b/app/index.html
@@ -31,14 +31,15 @@
           </div>
             <div class="goodies">
               <ul>
-                <li class="pic" id="golden"><a href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx-6pi7gtsCCmHsRjWg8pds9YdA6k328IPr8Sn7TBRyVx_c9t7Sg'><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx-6pi7gtsCCmHsRjWg8pds9YdA6k328IPr8Sn7TBRyVx_c9t7Sg'/></a>                 <p class="goldie"></p>
+                <li class="pic" id="golden"><a href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx-6pi7gtsCCmHsRjWg8pds9YdA6k328IPr8Sn7TBRyVx_c9t7Sg'><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx-6pi7gtsCCmHsRjWg8pds9YdA6k328IPr8Sn7TBRyVx_c9t7Sg'/></a></li>
+                      <p class="goldie"></p>
                 <li class="pic" id="lab"><a href='https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTL7reEzaQ__82NZMJHzuxhacyn8UidXL9MBdRS03vifkyypqBhHg'><img src='https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTL7reEzaQ__82NZMJHzuxhacyn8UidXL9MBdRS03vifkyypqBhHg'/></a></li>
                 <li class="pic" id="shitzu"><a href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqFwbP6lHp6XoHuPUw2kDLUTy1e1C0Ps-f67xe2Hwf1DlG01Gf'><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqFwbP6lHp6XoHuPUw2kDLUTy1e1C0Ps-f67xe2Hwf1DlG01Gf'/></a></li>
               </ul>
             </div>
         </div>
 
-        <button>FIGHT!</button>
+        <button id='fight'>FIGHT!</button>
 
         <div class="right">
           <div class="cat"><strong>Choose a competitor</strong>
