Name and Health

--- a/app/index.html
+++ b/app/index.html
@@ -30,13 +30,13 @@
           <div class="dog"><strong>Choose a competitor</strong>
           </div>
             <div class="goodies">
-              <p id='dogster' name="dog_name"><span id= "dog_health"></span></p>
+              <p id='dogster'></p>
               <ul>
-                <li class="pic" id="golden"><a href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx-6pi7gtsCCmHsRjWg8pds9YdA6k328IPr8Sn7TBRyVx_c9t7Sg'><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx-6pi7gtsCCmHsRjWg8pds9YdA6k328IPr8Sn7TBRyVx_c9t7Sg'/></a></li>
+                <li name="Sam" class="pic" id="golden"><a href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx-6pi7gtsCCmHsRjWg8pds9YdA6k328IPr8Sn7TBRyVx_c9t7Sg'><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx-6pi7gtsCCmHsRjWg8pds9YdA6k328IPr8Sn7TBRyVx_c9t7Sg'/></a></li>
 
-                <li class="pic" id="lab"><a href='https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTL7reEzaQ__82NZMJHzuxhacyn8UidXL9MBdRS03vifkyypqBhHg'><img src='https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTL7reEzaQ__82NZMJHzuxhacyn8UidXL9MBdRS03vifkyypqBhHg'/></a></li>
+                <li name="Lucy" class="pic" id="lab"><a href='https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTL7reEzaQ__82NZMJHzuxhacyn8UidXL9MBdRS03vifkyypqBhHg'><img src='https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTL7reEzaQ__82NZMJHzuxhacyn8UidXL9MBdRS03vifkyypqBhHg'/></a></li>
 
-                <li class="pic" id="shitzu"><a href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqFwbP6lHp6XoHuPUw2kDLUTy1e1C0Ps-f67xe2Hwf1DlG01Gf'><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqFwbP6lHp6XoHuPUw2kDLUTy1e1C0Ps-f67xe2Hwf1DlG01Gf'/></a></li>
+                <li name="Riley" class="pic" id="shitzu"><a href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqFwbP6lHp6XoHuPUw2kDLUTy1e1C0Ps-f67xe2Hwf1DlG01Gf'><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqFwbP6lHp6XoHuPUw2kDLUTy1e1C0Ps-f67xe2Hwf1DlG01Gf'/></a></li>
               </ul>
               <p class="d_stats"></p>
             </div>
@@ -50,11 +50,11 @@
             <div class="baddies">
               <p id='catster' class="cat_name"><span class= "cat_health"></span></p>
               <ul>
-                <li class="tic" id="persian"><a href='https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTJ7llPIRthJUcLnnGvStibQ42jZb-Ag8UJiwuVFSNLpliByTzPyg'><img src='https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTJ7llPIRthJUcLnnGvStibQ42jZb-Ag8UJiwuVFSNLpliByTzPyg'/></a></li>
+                <li name="Sheba" class="tic" id="persian"><a href='https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTJ7llPIRthJUcLnnGvStibQ42jZb-Ag8UJiwuVFSNLpliByTzPyg'><img src='https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTJ7llPIRthJUcLnnGvStibQ42jZb-Ag8UJiwuVFSNLpliByTzPyg'/></a></li>
 
-                <li class="tic" id="alley"><a href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEAZ-mgAvMrBZ7VWdosqDel__rUvyFoCGKYhM52H74W7G_kHZq'><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEAZ-mgAvMrBZ7VWdosqDel__rUvyFoCGKYhM52H74W7G_kHZq'/></a></li>
+                <li name="Mr. Snuggles" class="tic" id="alley"><a href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEAZ-mgAvMrBZ7VWdosqDel__rUvyFoCGKYhM52H74W7G_kHZq'><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEAZ-mgAvMrBZ7VWdosqDel__rUvyFoCGKYhM52H74W7G_kHZq'/></a></li>
 
-                <li class="tic" id="coon"><a href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5pdwWmCRpXy8QEutOp2WzA64D5HGVI7laBn-wDhsZvuxqh8Qn'><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5pdwWmCRpXy8QEutOp2WzA64D5HGVI7laBn-wDhsZvuxqh8Qn'/></a></li>
+                <li name="Princess Fluffy-Pants" class="tic" id="coon"><a href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5pdwWmCRpXy8QEutOp2WzA64D5HGVI7laBn-wDhsZvuxqh8Qn'><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5pdwWmCRpXy8QEutOp2WzA64D5HGVI7laBn-wDhsZvuxqh8Qn'/></a></li>
               </ul>
               <p class="c_stats"></p>
             </div>
