--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
 
     <div class="game">
       <h1>Backyard Brawl</h1>
+      <h2>DOGS vs CATS</h2>
 
         <div class="left">
           <div class="dog"><strong>Choose a competitor</strong>
