--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,10 @@
     <!-- endbuild -->
   </head>
   <body>
-
+   <div class="door">
+     <button id="enter">Enter Here</button>
+   </div>
+   <div class="gameOn">
     <div class="game">
       <h1>Backyard Brawl</h1>
       <h2>DOGS vs CATS</h2>
@@ -61,7 +64,7 @@
               <p class="c_stats"></p>
             </div>
         </div>
-
+      </div>
     </div>
 
     <!-- build:js scripts/vendor.js -->
