playing with styling

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,8 @@
       <h2>DOGS vs CATS</h2>
 
         <div class="left">
-          <div class="dog"><strong>Choose a competitor</strong>
+          <div class="dog">
+            <p><strong>Choose a competitor</strong></p>
           </div>
             <div class="goodies">
               <p id='dogster'></p>
@@ -50,7 +51,8 @@
         <button id='fight'>FIGHT!</button>
 
         <div class="right">
-          <div class="cat"><strong>Choose a competitor</strong>
+          <div class="cat">
+            <p><strong>Choose a competitor</strong></p>
           </div>
             <div class="baddies">
               <p id='catster' class="cat_name"><span class= "cat_health"></span></p>
