--- a/app/index.html
+++ b/app/index.html
@@ -33,10 +33,10 @@
 
         <div class="left">
           <div class="dog">
-            <p><strong>Choose a competitor</strong></p>
+            <p><strong>Choose a Competitor</strong></p>
           </div>
             <div class="goodies">
-              <p id='dogster'></p>
+              <p id='dogster' class="dog_name"><span class= "dog_health"></span></p></p>
               <ul>
                 <li name="Sam" class="pic" id="golden"><a href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx-6pi7gtsCCmHsRjWg8pds9YdA6k328IPr8Sn7TBRyVx_c9t7Sg'><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx-6pi7gtsCCmHsRjWg8pds9YdA6k328IPr8Sn7TBRyVx_c9t7Sg'/></a></li>
 
@@ -48,18 +48,18 @@
             </div>
         </div>
 
-        <button id='fight'>FIGHT!</button>
+          <button id='fight'>FIGHT!</button>
 
         <div class="right">
           <div class="cat">
-            <p><strong>Choose a competitor</strong></p>
+            <p><strong>Choose a Competitor</strong></p>
           </div>
             <div class="baddies">
               <p id='catster' class="cat_name"><span class= "cat_health"></span></p>
               <ul>
                 <li name="Sheba" class="tic" id="persian"><a href='https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTJ7llPIRthJUcLnnGvStibQ42jZb-Ag8UJiwuVFSNLpliByTzPyg'><img src='https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTJ7llPIRthJUcLnnGvStibQ42jZb-Ag8UJiwuVFSNLpliByTzPyg'/></a></li>
 
-                <li name="Mr. Snuggles" class="tic" id="alley"><a href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEAZ-mgAvMrBZ7VWdosqDel__rUvyFoCGKYhM52H74W7G_kHZq'><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEAZ-mgAvMrBZ7VWdosqDel__rUvyFoCGKYhM52H74W7G_kHZq'/></a></li>
+                <li name="Mr. Snuggles" class="tic" id="alley"><a href='https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSImi2O8wZGY5ZTmdyls69T3XSZrKothBtrxKXNKBMIHe5Ix_hx'><img src='https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSImi2O8wZGY5ZTmdyls69T3XSZrKothBtrxKXNKBMIHe5Ix_hx'/></a></li>
 
                 <li name="Princess Fluffy-Pants" class="tic" id="coon"><a href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5pdwWmCRpXy8QEutOp2WzA64D5HGVI7laBn-wDhsZvuxqh8Qn'><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5pdwWmCRpXy8QEutOp2WzA64D5HGVI7laBn-wDhsZvuxqh8Qn'/></a></li>
               </ul>
