--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
             <p><strong>Choose a Competitor</strong></p>
           </div>
             <div class="goodies">
-              <p id='dogster' class="dog_name"><span class= "dog_health"></span></p></p>
+              <p id='dogster'></p>
               <ul>
                 <li name="Sam" class="pic" id="golden"><a href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx-6pi7gtsCCmHsRjWg8pds9YdA6k328IPr8Sn7TBRyVx_c9t7Sg'><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx-6pi7gtsCCmHsRjWg8pds9YdA6k328IPr8Sn7TBRyVx_c9t7Sg'/></a></li>
 
@@ -55,7 +55,7 @@
             <p><strong>Choose a Competitor</strong></p>
           </div>
             <div class="baddies">
-              <p id='catster' class="cat_name"><span class= "cat_health"></span></p>
+              <p id='catster'></p>
               <ul>
                 <li name="Sheba" class="tic" id="persian"><a href='https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTJ7llPIRthJUcLnnGvStibQ42jZb-Ag8UJiwuVFSNLpliByTzPyg'><img src='https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTJ7llPIRthJUcLnnGvStibQ42jZb-Ag8UJiwuVFSNLpliByTzPyg'/></a></li>
 
